2011-11-22  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/Makefile: Added locale-defines.sym generation.
	* sysdeps/powerpc/locale-defines.sym: Locale definitions for strcasecmp
	optimized code.
	* sysdeps/powerpc/powerpc32/power7/Makefile: New file.
	* sysdeps/powerpc/powerpc32/power7/strcasecmp.S: New file.
	* sysdeps/powerpc/powerpc32/power7/strcasecmp_l.S: New file.
	* sysdeps/powerpc/powerpc64/power7/Makefile: Added unroll-loop option
	for strncasecmp/strncasecmp_l compilation.
	* sysdeps/powerpc/powerpc64/power7/strcasecmp.S: New file.
	* sysdeps/powerpc/powerpc64/power7/strcasecmp_l.S: New file.

2011-12-08  Marek Polacek  <mpolacek@redhat.com>

	[BZ #13484]
	* math/bits/math-finite.h: Use __REDIRECT_NTH and __NTH instead
	of __asm__.

2011-12-17  Ulrich Drepper  <drepper@gmail.com>

	[BZ #13506]
	* time/tzfile.c (__tzfile_read): Check values from file header.

2011-11-21  Will Schmidt  <will_schmidt@vnet.ibm.com>

	* powerpc/powerpc32/sysdep.h: Define SETUP_GOT_ACCESS() macro.
	* powerpc/powerpc32/a2/memcpy.S: Use SETUP_GOT_ACCESS() macro.
	* powerpc/powerpc32/dl-start.S: Likewise.
	* powerpc/powerpc32/elf/start.S: Likewise.
	* powerpc/powerpc32/fpu/__longjmp-common.S: Likewise.
	* powerpc/powerpc32/fpu/s_ceil.S: Likewise.
	* powerpc/powerpc32/fpu/s_ceilf.S: Likewise.
	* powerpc/powerpc32/fpu/s_floor.S: Likewise.
	* powerpc/powerpc32/fpu/s_floorf.S: Likewise.
	* powerpc/powerpc32/fpu/s_lround.S: Likewise.
	* powerpc/powerpc32/fpu/s_rint.S: Likewise.
	* powerpc/powerpc32/fpu/s_rintf.S: Likewise.
	* powerpc/powerpc32/fpu/s_round.S: Likewise.
	* powerpc/powerpc32/fpu/s_roundf.S: Likewise.
	* powerpc/powerpc32/fpu/s_trunc.S: Likewise.
	* powerpc/powerpc32/fpu/s_truncf.S: Likewise.
	* powerpc/powerpc32/fpu/setjmp-common.S: Likewise.
	* powerpc/powerpc32/memset.S: Likewise.
	* powerpc/powerpc32/power4/fpu/s_llround.S: Likewise.
	* powerpc/powerpc32/power4/fpu/w_sqrt.S: Likewise.
	* powerpc/powerpc32/power4/fpu/w_sqrtf.S: Likewise.